# qdgp

./: LICENSE  README.md  avail_diseases.py  benchmark.py  cross_validate.py  predictions.py  process.py  pyproject.toml  qdgp.yaml  run.py
benchmarking/: benchmark.py  process_benchmark.py
data/: OpenTargetsIDs_filtered.csv
qdgp/: data.py  evaluate.py  models.py  plot.py  utils.py
tables/: results_tables.py
tests/: test_models.py
